# ikat-auv-packages

./: ProjectHome.md  stack.xml
auv_visulaization/: CMakeLists.txt  manifest.xml
auv_visulaization/launch/: UWSim_auv.launch
auv_visulaization/src/: setSimulator.cpp
blob/: manifest.xml
buoy_ml_datagen/: CMakeLists.txt
buoydetect/: CMakeLists.txt  manifest.xml  th.txt
buoydetect/src/: detectbuoy.cpp
controller_interface/: rosbuild.cmake
controller_interface/src/: main.cpp  qnode.cpp
gps_common/: Makefile  manifest.xml
grabVideo/: CMakeLists.txt
ikat-sensors/depth_sensor/: CMakeLists.txt  Makefile  manifest.xml
ikat-sensors/mt9_sensor/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
ikat-sensors/serialport/: CMakeLists.txt  mainpage.dox
ikat_bottomcam/: mainpage.dox  manifest.xml
ikat_bottomcam/src/: bottomcamtest.cpp  ikat_bottomcam.cpp
ikat_controller/: CMakeLists.txt  manifest.xml
ikat_controller/src/: DepthController.cpp  (+4 more)
ikat_controller_msgs/: mainpage.dox  manifest.xml
ikat_frontcam/: CMakeLists.txt  buoy_threshold.txt  manifest.xml  obstacle_threshold.txt
ikat_ip_data/: manifest.xml
ikat_simulator/: stack.xml
ikat_thrusters/: CMakeLists.txt  manifest.xml
iptask/: mainpage.dox  manifest.xml
kraken_ideal_controller/: CMakeLists.txt  manifest.xml
manual_control/: CMakeLists.txt
markerdetect_ipl/: mainpage.dox  manifest.xml  th.txt
task_planner/: CMakeLists.txt
task_planner_data/: manifest.xml
threshgui/: CMakeLists.txt  manifest.xml
trunk/ikat_controller/: CMakeLists.txt  mainpage.dox  manifest.xml
trunk/ikat_controller/include/ikat_controller/: DepthController.h  ImageController.h  Technadyne.h  YawController.h
trunk/ikat_controller/src/: DepthController.cpp  ImageController.cpp  Technadyne.cpp  YawController.cpp  controller.cpp
(+143 files in other folders)
